--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Your awesome title
+title: Penny PHP Framework
 email: your-email@domain.com
 description: >
     Penny is a PHP framework that helps you to build middleware applications, it is based on an event system and allows you to combine the perfect libraries for your application.
